--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
-__pycache__/
+# Ignorar todas las carpetas __pycache__
+src/__pycache__/
+src/database/__pycache__/
+src/models/__pycache__/
+src/models/entities/__pycache__/
+
+# Opcional: Ignorar todos los archivos `.pyc` y carpetas `__pycache__` en todo el proyecto
+**/__pycache__/
+**/*.pyc
